Practica 5 Escalabilidad y tolerancia a fallos/webgatos/k8s/chaos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaosmonkey
  labels:
    app: chaosmonkey
spec:
  selector:
    matchLabels:
      app: chaosmonkey
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: chaosmonkey
      labels:
        app: chaosmonkey
    spec:
      serviceAccountName: default-chaos-svc
      containers:
      - name: chaosmonkey
        image: ghcr.io/jnewland/kubernetes-pod-chaos-monkey/kubernetes-pod-chaos-monkey:latest
