Practica 5 Escalabilidad y tolerancia a fallos/webgatos/k8s/istiogateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gatos-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gatos-vservice
spec:
  hosts:
  - "*"
  gateways:
  - gatos-gateway
  http:
  - match:
    - uri:
        prefix: /gatos
    route:
    - destination:
        port:
          number: 8080
        host: webapp
    retries:
      attempts: 3
      perTryTimeout: 5s
